package io.silky;

public interface Observer {
    void update(Subject subject);
}
